增加对接 百度AI开放平台 中 在线语音合成功能

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ quartz-cluster/quartz-cluster.iml
 quartz-cluster/target
 soap/soap.iml
 soap/target
+baidu-voice/baidu-voice.iml
+baidu-voice/target
