--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>soap</module>
         <module>common</module>
         <module>kafka</module>
+        <module>baidu-voice</module>
     </modules>
 
     <properties>
@@ -42,6 +43,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
         </dependency>
 
         <!-- Web -->
