--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>common</module>
         <module>kafka</module>
         <module>baidu-voice</module>
+        <module>cloud</module>
     </modules>
 
     <properties>
