--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -6,14 +6,15 @@
 
     <groupId>cn.jxdog.miscellaneous</groupId>
     <artifactId>cloud</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0</version>
 
     <name>cloud</name>
     <description>project for Spring Cloud Finchley</description>
 
     <modules>
-        <module>finchley-eureka-server</module>
-        <module>finchley-eureka-client</module>
+        <module>finchley-server-eureka</module>
+        <module>finchley-client-eureka</module>
     </modules>
 
     <properties>
