增加消费者(Feign)

--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -16,6 +16,7 @@
         <module>finchley-server-eureka</module>
         <module>finchley-client-eureka</module>
         <module>finchley-consumer-ribbon-resttemplate</module>
+        <module>finchley-consumer-feign</module>
     </modules>
 
     <properties>
