--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ cloud/finchley-client-eureka/finchley-client-eureka.iml
 cloud/finchley-client-eureka/target
 cloud/finchley-consumer-ribbon-resttemplate/finchley-consumer-ribbon-resttemplate.iml
 cloud/finchley-consumer-ribbon-resttemplate/target
+cloud/finchley-consumer-feign/finchley-consumer-feign.iml
+cloud/finchley-consumer-feign/target
