--- a/another/pom.xml
+++ b/another/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.jxdog.miscellaneous</groupId>
+    <groupId>cn.qingmg.miscellaneous</groupId>
     <artifactId>another</artifactId>
     <version>1.0.0</version>
 
@@ -12,7 +12,7 @@
     <description>小项，指某个技术</description>
 
     <parent>
-        <groupId>cn.jxdog.miscellaneous</groupId>
+        <groupId>cn.qingmg.miscellaneous</groupId>
         <artifactId>parent</artifactId>
         <version>1.0.0</version>
     </parent>
