--- a/soap/pom.xml
+++ b/soap/pom.xml
@@ -6,14 +6,14 @@
     <artifactId>soap</artifactId>
 
     <parent>
-        <groupId>cn.jxdog.miscellaneous</groupId>
+        <groupId>cn.qingmg.miscellaneous</groupId>
         <artifactId>parent</artifactId>
         <version>1.0.0</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>cn.jxdog.miscellaneous</groupId>
+            <groupId>cn.qingmg.miscellaneous</groupId>
             <artifactId>common</artifactId>
             <version>1.0.0</version>
         </dependency>
@@ -28,6 +28,11 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+            <version>3.2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http</artifactId>
             <version>3.2.7</version>
         </dependency>
 
