--- a/cloud/finchley-consumer-feign/src/main/resources/config/application.yml
+++ b/cloud/finchley-consumer-feign/src/main/resources/config/application.yml
@@ -7,3 +7,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://192.168.1.123:8888/eureka/
+# 开启断路器
+feign:
+  hystrix:
+    enabled: true
