配置 集群 服务中心 和 增加 包含 消息总线 的 客户端 (实现可以加载更新后的配置文件)

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ cloud/finchley-config-server/finchley-config-server.iml
 cloud/finchley-config-server/target
 cloud/finchley-config-client/finchley-config-client.iml
 cloud/finchley-config-client/target
+cloud/finchley-config-client-bus/finchley-config-client-bus.iml
+cloud/finchley-config-client-bus/target
