--- a/cloud/finchley-config-server/src/main/resources/config/bootstrap.yml
+++ b/cloud/finchley-config-server/src/main/resources/config/bootstrap.yml
@@ -19,3 +19,7 @@ spring:
           password:
       # 仓库分支
       label: master
+eureka:
+  client:
+    service-url:
+      defaultZone: http://192.168.1.123:8888/eureka/
