--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ cloud/finchley-config-client-bus/finchley-config-client-bus.iml
 cloud/finchley-config-client-bus/target
 design-patterns/design-patterns.iml
 design-patterns/target
+mybatis-mysql-generator/mybatis-mysql-generator.iml
+mybatis-mysql-generator/target
