--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>baidu-voice</module>
         <module>cloud</module>
         <module>design-patterns</module>
+        <module>mybatis-mysql-generator</module>
     </modules>
 
     <properties>
@@ -36,6 +37,10 @@
         <commons-lang3.version>3.7</commons-lang3.version>
         <fastjson.version>1.2.47</fastjson.version>
         <sitemesh.version>3.0.1</sitemesh.version>
+
+        <!-- Mybatis generator -->
+        <mybatis.version>3.5.1</mybatis.version>
+        <mybatis-generator.version>1.3.7</mybatis-generator.version>
     </properties>
 
     <dependencies>
