初步实现 shiro 管理登陆

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ design-patterns/design-patterns.iml
 design-patterns/target
 mybatis-mysql-generator/mybatis-mysql-generator.iml
 mybatis-mysql-generator/target
+shiro/shiro.iml
+shiro/target
