--- a/mybatis-mysql-generator/src/main/resources/jdbc.properties
+++ b/mybatis-mysql-generator/src/main/resources/jdbc.properties
@@ -2,3 +2,5 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/miscellaneous_shiro?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 jdbc.user=root
 jdbc.pass=root
+target.javasource=F:/vhaisong/miscellaneous/shiro/src/main/java
+target.resource=F:/vhaisong/miscellaneous/shiro/src/main/resources
