--- a/common/pom.xml
+++ b/common/pom.xml
@@ -11,4 +11,19 @@
         <version>1.0.0</version>
     </parent>
 
+    <dependencies>
+        <!-- tk.mapper -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+        <!-- PageHelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
