--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>cloud</module>
         <module>design-patterns</module>
         <module>mybatis-mysql-generator</module>
+        <module>shiro</module>
     </modules>
 
     <properties>
@@ -41,6 +42,14 @@
         <!-- Mybatis generator -->
         <mybatis.version>3.5.1</mybatis.version>
         <mybatis-generator.version>1.3.7</mybatis-generator.version>
+
+        <!-- boot-tk.mapper -->
+        <boot-tk-mapper.version>1.2.4</boot-tk-mapper.version>
+
+        <!-- Shiro Module -->
+        <shiro.version>1.4.0</shiro.version>
+        <druid.version>1.1.16</druid.version>
+        <mysql-jar.version>5.1.47</mysql-jar.version>
     </properties>
 
     <dependencies>
