--- a/baidu-voice/pom.xml
+++ b/baidu-voice/pom.xml
@@ -7,7 +7,7 @@
     <packaging>war</packaging>
 
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>miscellaneous</artifactId>
         <groupId>cn.qingmg.miscellaneous</groupId>
         <version>1.0.0</version>
     </parent>
