--- a/mybatis-mysql-generator/pom.xml
+++ b/mybatis-mysql-generator/pom.xml
@@ -10,7 +10,7 @@
 
     <parent>
         <groupId>cn.qingmg.miscellaneous</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>miscellaneous</artifactId>
         <version>1.0.0</version>
     </parent>
 
