数据库连接参数更新

--- a/shiro/src/main/resources/application.yml
+++ b/shiro/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/miscellaneous_shiro?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+    url: jdbc:mysql://127.0.0.1:3306/miscellaneous_shiro?characterEncoding=UTF-8&useSSL=false&useUnicode=true
     username: root
     password: root
   thymeleaf:
