--- a/quartz-cluster/src/main/resources/application.yml
+++ b/quartz-cluster/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.1.122:3306/miscellaneous_quartz?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+    url: jdbc:mysql://192.168.1.122:3306/miscellaneous_quartz?characterEncoding=UTF-8&useSSL=false&useUnicode=true
     username: root
     password: 123456
   jpa:
