--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>design-patterns</module>
         <module>mybatis-mysql-generator</module>
         <module>shiro</module>
+        <module>websocket-chat</module>
     </modules>
 
     <properties>
